@@ -1,3 +1,8 @@
+2011-04-05 Alexander Malysh <amalysh at kannel.org>
+    * gw/bb_smscconn.c, gw/smscconn.c, gw/smscconn_p.h: apllied patch that implements
+      speed/throughput meters on a per-smsc basis.
+      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.
+
 2011-03-30 Alexander Malysh <amalysh at kannel.org>
     * applied patch that fixes some issues for HTTP-SMSC:
       1) added support for max-pending-submits , so that we don't eat all our
